--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,15 @@
+spring:
+  sql:
+    init:
+      mode: ALWAYS
+  datasource:
+    url: jdbc:h2:file:./db/filmorate
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  h2:
+    console:
+      enabled: true
 logging:
   level:
     org:
